--- a/index.html
+++ b/index.html
@@ -268,5 +268,16 @@ drawStars();
 
 </script>
 
-</body>
+<h2>Our Beautiful Memories 💖</h2>
+
+<div style="display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
+
+  <img src="IMG-20251213-WA0044.jpg" width="200">
+  <img src="IMG-20251213-WA0045.jpg" width="200">
+  <img src="IMG-20251216-WA0038.jpg" width="200">
+  <img src="Snapchat-1250477501.jpg" width="200">
+  <img src="Snapchat-1255573139.jpg" width="200">
+  <img src="Snapchat-1843727629.jpg" width="200">
+
+</div></body>
 </html>
