--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <div style="display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
 
-  <img src="IMG-20251213-WA0044.jpg" width="200">
-  <img src="IMG-20251213-WA0045.jpg" width="200">
-  <img src="IMG-20251216-WA0038.jpg" width="200">
-  <img src="Snapchat-1250477501.jpg" width="200">
-  <img src="Snapchat-1255573139.jpg" width="200">
-  <img src="Snapchat-1843727629.jpg" width="200">
+  <img src="photo1.jpg" width="200">
+  <img src="photo2.jpg" width="200">
+  <img src="photo3.jpg" width="200">
+  <img src="photo4.jpg" width="200">
+  <img src="photo5.jpg" width="200">
+  <img src="photo6.jpg" width="200">
 
 </div>body{
 margin:0;
